RESOLVED FIXED109631
Crash when scrolling soon after page starts loading
https://bugs.webkit.org/show_bug.cgi?id=109631
Summary Crash when scrolling soon after page starts loading
Simon Fraser (smfr)
Reported 2013-02-12 16:48:25 PST
Crash when scrolling soon after page starts loading
Attachments
Patch (7.56 KB, patch)
2013-02-12 16:52 PST, Simon Fraser (smfr)
andersca: review+
Simon Fraser (smfr)
Comment 1 2013-02-12 16:52:46 PST
Simon Fraser (smfr)
Comment 2 2013-02-12 17:00:30 PST
Note You need to log in before you can comment on or make changes to this bug.